<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    tools:context=".ui.activity.SettingsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemPlayOnMobile"
                app:text="@string/play_songs_on_mobile"
                app:itemType="item_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/switchPlayOnMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"

                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </com.dirror.music.widget.ItemLayout>

            <View
                android:alpha="0.5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="?android:attr/listDivider" />


            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemSourceCode"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:text="@string/source_code">

            </com.dirror.music.widget.ItemLayout>

            <View
                android:alpha="0.5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="?android:attr/listDivider" />

            <com.dirror.music.widget.ValueView
                android:id="@+id/itemFoyouVersion"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:text="Foyou"
                app:value="1.0.0">

            </com.dirror.music.widget.ValueView>

            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemFeedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:text="@string/feedback">

            </com.dirror.music.widget.ItemLayout>

            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemAbout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:text="@string/about">

            </com.dirror.music.widget.ItemLayout>

        </LinearLayout>
    </ScrollView>

    <com.dirror.music.widget.TitleBarLayout
        android:id="@+id/titleBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:text="@string/settings">

    </com.dirror.music.widget.TitleBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>