<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_background"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity3">

    <com.dirror.music.widget.TitleBarLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:text="@string/login" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLoginByQRCode"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_button_radius_red"
                android:text="@string/login_by_qrcode"
                android:textColor="@color/colorItemBackground"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btnLoginByUid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnLoginByPhone"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_button_radius_red"
                android:text="@string/login_by_phone"
                android:textColor="@color/colorItemBackground"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btnLoginByQRCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/btnLoginByUid"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_button_radius_red"
                android:text="@string/login_by_uid"
                android:textColor="@color/colorItemBackground"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="@dimen/subTextSize"
                android:text="因网易增加了网易云盾验证，密码登录暂时不要使用，尽量使用二维码登录"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>