<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPageBackground"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="48dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clUser"
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1px"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                    <ImageView
                        android:id="@+id/ivCover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@tools:sample/avatars"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorTextForeground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cd"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemPlayOnMobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:itemType="item_no"
                app:text="@string/play_songs_on_mobile">

                <Switch
                    android:id="@+id/switchPlayOnMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"

                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </com.dirror.music.widget.ItemLayout>

            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemPauseSongAfterUnplugHeadset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:itemType="item_no"
                app:text="@string/pause_song_after_unplug_headset">

                <Switch
                    android:id="@+id/switchPauseSongAfterUnplugHeadset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </com.dirror.music.widget.ItemLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:alpha="0.5"
                android:background="?android:attr/listDivider" />


            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemSourceCode"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:text="@string/source_code">

            </com.dirror.music.widget.ItemLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:alpha="0.5"
                android:background="?android:attr/listDivider" />

            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemFeedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:text="@string/feedback">

            </com.dirror.music.widget.ItemLayout>

            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemAbout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:text="@string/about">

            </com.dirror.music.widget.ItemLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:alpha="0.5"
                android:background="?android:attr/listDivider" />

            <com.dirror.music.widget.ItemLayout
                android:id="@+id/itemSwitchAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:text="@string/switch_account">

            </com.dirror.music.widget.ItemLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>